--- a/css/cit261.css
+++ b/css/cit261.css
@@ -1,3 +1,35 @@
+.fadeIn{
+	animation: fadeIn 1.5s ease-in;
+	-webkit-animation: fadeIn 1.5s ease-in;		
+	display: block !important;	
+}
+
+@keyframes fadeIn {
+	0% {
+		transform: scale(0);
+		opacity: 0.0;		
+	}	
+	100% {
+		transform: scale(1);
+		opacity: 1;	
+	}		
+}
+.fadeOut{
+	animation: fadeOut 1.5s ease-in;
+	-webkit-animation: fadeOut 1.5s ease-in;		
+	display: none !important;	
+}
+
+@keyframes fadeOut {
+	0% {
+		transform: scale(1);
+		opacity: 1;		
+	}	
+	100% {
+		transform: scale(0);
+		opacity: 0.0;	
+	}		
+}
 ul {
 	list-style-type: none;
 }
